# DeepNetwork

./: .gitignore  DeepNetwork.sln  PyNet Infrastructure.sln
.github/: Add-BmiSetting.ps1
DeepNetwork.Infrastructure/: DeepNetwork.Infrastructure.vcxproj  DeepNetwork.Infrastructure.vcxproj.filters  Log.h  NormaliseLayer.cpp  NormaliseLayer.h  PyNetwork.cpp  (+10 more)
PyNet.Infrastructure/: CMakeLists.txt  PyNet.Infrastructure.vcxproj  PyNet.Infrastructure.vcxproj.filters
PyNet.Infrastructure/Include/: LogLevel.h  PyNetwork_Functions.h
PyNet.Infrastructure/PyNet.Console/: PyNet.Console.cpp  PyNet.Console.vcxproj  PyNet.Console.vcxproj.filters
PyNet.Infrastructure/Src/: AdjustmentCalculator.cpp  AdjustmentCalculator.h  BackPropagator.cpp  BackPropagator.h  BernoulliGenerator.cpp  BernoulliGenerator.h  DropoutRunner.cpp  DropoutRunner.h  Headers.h  ILogger.h  Intermediary.h  LayerNormaliser.h  LayerPropagator.cpp  LayerPropagator.h  Logger.cpp  Logger.h  MatrixPadder.h  NetworkRunner.cpp  NetworkRunner.h  NetworkTrainer.cpp  NetworkTrainer.h  NormaliseLayer.h  PyNetwork.cpp  PyNetwork.h  PyNetwork_Functions.cpp  ReceptiveFieldProvider.h  RunMode.h  Setup.cpp  Startup.cpp  Startup.h  TrainingState.h  VLService.cpp  VLService.h  Xml_Functions.cpp  Xml_Functions.h  matrix_multiplication.cpp  matrix_multiplication.h
PyNet.Infrastructure/Src/Activations/: Activation.h  ActivationModule.h  Logistic.h  Relu.h
PyNet.Infrastructure/Src/Layers/: ConvolutionalLayer.h  DenseLayer.h  DropoutLayer.h  FlattenLayer.h  InputLayer.h  Layer.h  LayerModule.h  MaxPoolingLayer.h  SoftmaxLayer.h  TrainableLayer.h
PyNet.Infrastructure/libs/PyNet.Console/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.Console/modules/: Console.ixx
PyNet.Infrastructure/libs/PyNet.Console/src/: PyNet.Console.cpp
PyNet.Infrastructure/libs/PyNet.DI/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.DI/include/PyNet.DI/: Context.h  ContextBuilder.h  IItem.h  IServiceCollection.h  IServiceDescriptor.h  IServiceProvider.h  InstanceMode.h  Item.h  ItemContainer.h  ItemRegistrar.h  Module.h  ServiceCollection.h  ServiceDescriptor.h  ServiceProvider.h
PyNet.Infrastructure/libs/PyNet.DI/modules/: Context.ixx  ContextBuilder.ixx  InstanceMode.ixx  Item.ixx  ItemContainer.ixx  ItemRegistrar.ixx  Module.ixx  PyNet.DI.ixx
PyNet.Infrastructure/libs/PyNet.DI/src/Internal/: ServiceFactory.h
PyNet.Infrastructure/libs/PyNet.DI/tests/: ItemTests.cpp  ServiceProviderTests.cpp
PyNet.Infrastructure/libs/PyNet.Models/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.Models.Cpu/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.Models.Cpu/include/PyNet.Models.Cpu/: ActivationProvider.h  CpuLogistic.h  CpuMatrix.h  CpuModule.h  CpuRelu.h  CpuVector.h
PyNet.Infrastructure/libs/PyNet.Models.Cpu/modules/: CpuLogistic.ixx  CpuMatrix.ixx  CpuModule.ixx  CpuVector.ixx  PyNet.Models.Cpu.ixx
PyNet.Infrastructure/libs/PyNet.Models.Cpu/src/: CpuLogistic.cpp  CpuMatrix.cpp  CpuVector.cpp
PyNet.Infrastructure/libs/PyNet.Models.Cpu/tests/: CMakeLists.txt  CpuMatrixTests.cpp
PyNet.Infrastructure/libs/PyNet.Models.Cuda/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.Models.Cuda/include/PyNet.Models.Cuda/: CudaLogistic.h  CudaMatrix.h  CudaModule.h  CudaVector.h  Matrix_Operations.h
PyNet.Infrastructure/libs/PyNet.Models.Cuda/modules/: CudaMatrix.ixx  CudaModule.ixx  CudaVector.ixx  PyNet.Models.Cuda.ixx
PyNet.Infrastructure/libs/PyNet.Models.Cuda/src/: CudaArray.h  CudaLogistic.cpp  CudaMatrix.cpp  CudaVector.cpp  Matrix_Addition.cu  Matrix_Addition_Assignment.cu  Matrix_Dot_Product.cu  Matrix_Double_Addition.cu  Matrix_Double_Multiplication.cu  Matrix_Exp.cu  Matrix_Hadamard.cu  Matrix_Logistic.cu  Matrix_Logistic_Derivative.cu  Matrix_Max.cu  Matrix_Multiplication.cu  Matrix_Reciprocal.cu  Matrix_Step.cu  Matrix_Subtraction.cu  cuda_array.h
PyNet.Infrastructure/libs/PyNet.Models.Cuda/tests/: CMakeLists.txt  CudaMatrixTests.cpp  CudaMatrixTests.ixx  UnitTest.h  UnitTest.ixx
PyNet.Infrastructure/libs/PyNet.Models/include/PyNet.Models/: Activation.h  Context.h  ILogger.h  Logistic.h  Loss.h  Matrix.h  Vector.h
PyNet.Infrastructure/libs/PyNet.Models/libs/PyNet.Infrastructure.Cuda/: CMakeLists.txt
PyNet.Infrastructure/libs/PyNet.Models/libs/PyNet.Infrastructure.Cuda/include/PyNet.Infrastructure.Cuda/: Matrix_Multiplication.h
PyNet.Infrastructure/libs/PyNet.Models/libs/PyNet.Infrastructure.Cuda/src/: Matrix_Multiplication.cu  cuda_array.h
PyNet.Infrastructure/libs/PyNet.Models/modules/: Activation.ixx  ILogger.ixx  Loss.ixx  Matrix.ixx  PyNet.Models.ixx  Vector.ixx
PyNet.Infrastructure/libs/PyNet.Models/src/: Logistic.cpp  Matrix.cpp  Vector.cpp
PyNet.Infrastructure/modules/: AdjustmentCalculator.ixx  GradientCalculator.ixx  InfrastructureModule.ixx  LayerNormaliser.ixx  LayerPropagator.ixx  Logger.ixx  NetworkRunner.ixx  NetworkTrainer.ixx  PyNet.Infrastructure.ixx  PyNetwork.ixx  PyNetwork_Functions.ixx  QuadraticLoss.ixx  Settings.ixx  Setup.ixx  SteepestDescent.ixx  TrainingAlgorithm.ixx  VariableLearningSettings.ixx  XmlReader.ixx  XmlWriter.ixx  Xml_Functions.ixx
PyNet.Infrastructure/src/: Context.h  GradientCalculator.cpp  GradientCalculator.h  InfrastructureModule.h  Module.h  QuadraticLoss.cpp  QuadraticLoss.h  Settings.h  Setup.h  SteepestDescent.cpp  SteepestDescent.h  TrainingAlgorithm.h  VariableLearningSettings.h  XmlReader.cpp  XmlReader.h  XmlWriter.cpp  XmlWriter.h
PyNet.Infrastructure/tests/: BackPropagatorTests.cpp  CMakeLists.txt  ContainerFixture.h  FakeLogger.h  IntegrationTestsModule.h  LayerPropagatorTests.cpp  LayerPropagatorTests.ixx  NetworkRunnerTests.cpp  NetworkTrainerTests.cpp  PyNet.Infrastructure.Tests.ixx  PyNetworkTests.cpp  PyNetworkTests.ixx  SteepestDescentTests.cpp  SteepestDescentTests.ixx  UnitTest.h  UnitTest.ixx
PyNet.Infrastructure/tests/Layers/: DenseLayerTests.cpp  FakeLayer.h  InputLayerTests.cpp
PyNet.Infrastructure/tests/Resources/: Training_Example0.txt  Training_Example1.txt  Training_Example5.txt  Training_Example7.txt  Training_Example8.txt  Training_Example9.txt
(+110 files in other folders)
